manifests/elastic/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: terence.cloud
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-Email
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $authHeader0 $upstream_http_x_auth_request_email;
      proxy_set_header 'X-Auth-Request-Email' $authHeader0;
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.terence.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  name: https
  tls:
    - secretName: kibana-tls
      hosts:
        - kibana.terence.cloud
